# tomlrs-cli

./: .dcignore  .editorconfig-checker.json  .gitignore  .gommit.toml  .mailmap  .rumdl.toml  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTORS  README.md  Taskfile.dist.yml  cliff.toml  ecrc.toml  hk.pkl  lychee.toml  osv-scanner.toml  pyproject.toml  ruff.toml
.config-manager.d/: config.toml  python.toml  standard.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: update-on-push.yml
.kiro/agents/: kirograph.json
.kiro/hooks/: kirograph-compress-hint.kiro.hook  kirograph-sync-if-dirty.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: core-premises.md  kirograph-architecture.md  kirograph-debug.md  kirograph-onboard.md  kirograph-refactor.md  kirograph-review.md  kirograph.md  markdown-style.md  python-code-conventions.md
.kirograph/: .gitignore  .session-id  config.json  kirograph.db  token-savings.jsonl
docs/: comprehensive.md  quickstart.md
src/tomlrs_cli/: __init__.py  cli.py
src/tomlrt_cli/: __init__.py  cli.py
tests/: test_cli.py  test_parse_path.py
tools/: Brewfile.standard  Taskfile.internal.yml  Taskfile.python.yml
