[project]
  name = "tomlrt-cli"
  version = "1.0.1"
  description = "Read and write values in TOML files while preserving comments and formatting."
  readme = "README.md"
  requires-python = ">=3.12"
  license = "MIT"
  authors = [ { email = "ryan@ryanparman.com", name = "Ryan Parman" } ]
  keywords = [ "cli", "config", "edit", "rust", "toml" ]
  classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
  ]
  dependencies = [ "tomlrt>=1.7.2,<2" ]

  [project.urls]
    Homepage = "https://github.com/northwood-labs/tomlrt-cli"
    Issues = "https://github.com/northwood-labs/tomlrt-cli/issues"
    Repository = "https://github.com/northwood-labs/tomlrt-cli"

  [project.scripts]
    tomlrt-cli = "tomlrt_cli.cli:main"

[dependency-groups]
  dev = [ "hypothesis>=6.155.1,<7", "ruff>=0.15,<1", "tryke>=0.0.29,<1", "zuban>=0.8,<1" ]

[build-system]
  requires = [ "uv_build>=0.11.17,<0.12.0" ]
  build-backend = "uv_build"

[tool.ruff]
  target-version = "py312"
  line-length = 120

  [tool.ruff.lint]
    select = [ "E", "F", "I", "N", "W", "UP" ]

[tool.tryke]
  src = [ ".", "src" ]
